Cambios en el font

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
-    color: #FFF
+    color: #FFF;
+
 }
 
 body {
@@ -10,4 +11,8 @@ body {
 body > div {
     width: 100%;
     text-align: center;
+}
+
+div > * {
+    font-family: Arial, Helvetica, sans-serif;
 }
