--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     color: #FFF;
-
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -8,7 +9,29 @@ body {
     justify-content: center;
 }
 
-body > div {
+#head {
+    height: 120px;
+    background-color: grey;
+}
+
+#head > * {
+    padding: 10px 20px;
+}
+
+#content {
     width: 100%;
+    height: 800px;
+}
+
+.post {
+    height: 500px;
+    width: 250px;
+    background-color: grey;
+    margin: 15px 20px;
     text-align: center;
+}
+
+.post > img {
+    height: 250px;
+    width: 250px;
 }
