--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
     color: #FFF;
     margin: 0;
     padding: 0;
+    font-family: Arial;
+}
+
+*::selection {
+    background-color: #515157;
 }
 
 body {
@@ -10,8 +15,27 @@ body {
 }
 
 #head {
-    height: 120px;
+    display: grid;
+    place-items: center;
+    width: 100%;
+    height: 150px;
+    text-align: center;
     background-color: grey;
+}
+
+#head ul li{
+    display: inline;
+    text-align: center;
+    margin: 0 10px 0 0;
+    cursor: pointer;
+    font-weight: bolder;
+    text-decoration: underline;
+    transition-duration: .3s;
+}
+
+#head ul li:hover {
+    color: #323232;
+    height: 120px;
 }
 
 #head > * {
@@ -24,15 +48,17 @@ body {
 }
 
 .post {
-    display: inline-block;
-    height: 500px;
+    height: 550px;
     width: 250px;
     background-color: grey;
     margin: 15px 20px;
     text-align: center;
+    float: left;
+    cursor: pointer;
 }
 
 .post > img {
     height: 250px;
     width: 250px;
+    user-select: none;
 }
