--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #323232;
+    background-color: grey;
     justify-content: center;
 }
 
@@ -16,7 +16,7 @@ body {
     width: 100%;
     height: 150px;
     text-align: center;
-    background-color: grey;
+    background-color: #323232;
 }
 
 #head ul li{
@@ -32,7 +32,6 @@ body {
 #head ul li:hover {
     color: rgb(182, 182, 182);
     height: 120px;
-    background-color: grey;
 }
 
 #head > * {
@@ -45,15 +44,18 @@ body {
 }
 
 .post {
-    height: 550px;
+    height: 590px;
     width: 300px;
-    background-color: grey;
+    background-color: #323232;
     margin: 15px 20px;
     text-align: center;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 .post > img {
     height: 300px;
     width: 300px;
+    border-radius: 10px;
+    margin-bottom: 15px;
 }
