--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     width: 100%;
     height: 150px;
     text-align: center;
-    background-color: #323232;
+    background-color: #37363b;
 }
 
 #head ul li{
@@ -30,7 +30,7 @@ body {
 }
 
 #head ul li:hover {
-    color: rgb(182, 182, 182);
+    color: rgb(141, 141, 146);
     height: 120px;
 }
 
@@ -46,16 +46,32 @@ body {
 .post {
     height: 590px;
     width: 300px;
-    background-color: #323232;
+    background-color: #4d4d50;
     margin: 15px 20px;
     text-align: center;
     cursor: pointer;
     border-radius: 10px;
+    transition-duration: 0.3s;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+}
+
+.post:hover {
+    background-color: #5d5d5f;
+    box-shadow: 6px 6px 10px #4d4d50;
 }
 
 .post > img {
     height: 300px;
     width: 300px;
     border-radius: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
+}
+
+.post > h1 {
+    margin-bottom: 5px;
+}
+
+.post > p {
+    padding: 0px 15px;
+    text-align: left;
 }
